# MLOpsProject

./: .gitignore  LICENSE  Makefile  README.md  README_2.md  api_train_model.dockerfile  predict_model.dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
MLOpsProject/: __init__.py  click_predict_model.py  config.py  helper.py  main.py  optuna_optimization.py  predict_model.py  train_model.py
MLOpsProject/API/: channels.json  main.py
MLOpsProject/Google_Cloud/: local.py  main.py  trained_model.pt
MLOpsProject/conf/: config.yaml
MLOpsProject/data/: clean_data.py  cs_data_loader.py  dummy_data_loader.py  make_dataset.py  raw_2_clean.py
MLOpsProject/models/: model.py  test_model.py  trained_model.pt
MLOpsProject/tests/: test_data.py  test_model.py  test_model_structure.py  test_modelstructure.py  testsall.py
data/raw/.dvc/: config
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
outputs/2024-01-06/14-57-19/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-06/14-57-30/.hydra/: hydra.yaml
outputs/2024-01-06/14-59-01/.hydra/: config.yaml  hydra.yaml
reports/: README.md
